styles/style.css
@import './normalize.css';
@import './vars.css';

/* ======================================GLOBAL========================================== */

html {
    font-family:'Segoe UI', sans-serif;
    background-color: var(--violet);
}

html, body {
    height: 100%;
}

.wrapper {
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

[class*='__container'] {
    padding: 0 1.5rem;
}

@media(max-width: 320.98px) {
    [class*='__container'] {
        padding: 0 13px;
    }
}

button {
    padding: 0;
    border: none;
    font: inherit;
    color: inherit;
    background-color: transparent;
    cursor: pointer;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
    display: none;
}

/* ======================================HEADER========================================== */

.header {
    padding: 18px 0;
}

.header__container {
    display: flex;
    align-items: center;
}

.header__burger {
    display: flex;
    margin-right: 16px;
    padding: 11px 9px 11px 9px;
    border-radius: 8px;
    border: 1px solid rgba(255, 255, 255, 0.45);
}

.header__burger img {
    display: block;
}

.header__logo {
    margin-right: 31px;
    color: var(--system-white);
    font-size: 22px;
    font-weight: 600;
    letter-spacing: 1.86px;
    text-decoration: none;
    display: flex;
    white-space: pre-line;
}

.header__search-form {
    padding: 10px 0px 13px 20px;
    flex: 1 1 auto;
    display: flex;
    align-items: center;
    margin-right: 32px;
    border-radius: 36px;
    background: rgba(255, 255, 255, 0.20);
    opacity: 0.5;
    overflow: hidden;
}

.header__search-form:focus-within {
    outline: 2px solid var(--system-white);
}

.header__search-form label {
    display: flex;
}

.header__search-form input {
    width: 100%;
    height: 100%;
    color: var(--system-white);
    border-radius: 36px;
    border: none;
    background: transparent;
    font-size: 18px;
    font-weight: 400;
    line-height: 24px;
}

.header__search-form input:focus {
    outline: none;
}

.header__search-form input::placeholder {
    color: var(--system-white);
}

.header__search-form button[type='submit'] {
    padding: 0 20px;
}

.header__search-form button[type='submit'] img {
    display: block;
    opacity: 0.4;
}

.header__links {
    display: flex;
    gap: 43px;
    padding: 0;
    margin: 0;
    list-style: none;
}

.header__link a {
    display: flex;
    gap: 6px;
    flex-direction: column;
    align-items: center;
    color: var(--system-white);
    font-size: 13px;
    line-height: 16px;
    text-decoration: none;
}

.header__link_profile svg {
    transform: translate(1px, -2px);
}

.header__link_cart {
    position: relative;
}

.header__link_cart svg {
    transform: translate(-3px, -2px);
}

.header__link_cart-label {
    position: absolute;
    top: -6px;
    right: 5px;
    padding: 1px 5px;
    border-radius: 16px;
    background: var(--system-red);
    font-size: 10px;
    font-weight: 700;
    line-height: 17px;
}

@media(max-width: 767.98px) {
    .header__burger {
        border: none;
        padding: 0;
    }

    .header__logo {
        white-space: nowrap;
    }

    .header__links {
        display: none;
    }

    .header__search-form {
        margin-right: 0;
    }
}

@media(max-width:500px) {
    .header__burger {
        margin-right: 13px;
        margin-left: -6px;
        padding: 8px;
    }

    .header__logo  {
        margin-right: 0;
        flex-grow: 1;
        font-size: 20px;
        letter-spacing: 2.06px;
    }

    .header__search-form {
        padding: 0;
        display: block;
        flex: 0 0 auto;
        background: initial;
        opacity: 1;
    }

    .header__search-form input {
        display: none;
    }

    .header__search-form button[type='submit'] {
        padding: 10px 20px;
    }

    .header__search-form button[type='submit'] img {
        opacity: 1;
    }
}

@media(max-width:320.98px) {
    .header {
        padding: 4px 0;
    }

    .header__logo {
        font-size: 20px;
        letter-spacing: 2.06px;
    }
}

.main {
    display: grid;
    flex: 1 1 auto;
    border-radius: 24px;
    background-color: var(--smoky);
}

